--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">音楽ライブの制作（照明・映像・広報）</h2>
+                                    <p class="portfolio-modal-title text-secondary mb-0">音楽ライブの制作（照明・映像・広報）</p>
                                     <br>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-2" src="assets/img/others/live.jpeg" alt="..." />
@@ -293,7 +293,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">物体認識を用いたインタラクティブ影絵</h2>
+                                    <p class="portfolio-modal-title text-secondary mb-0">物体認識を用いたインタラクティブ影絵</p>
                                     <br>
                                     <!-- Portfolio Modal - Image-->
                                     <div class="iframeWrapper mb-2">
@@ -323,7 +323,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">ドキュメンタリー映像「道を彩る人」</h2>
+                                    <p class="portfolio-modal-title text-secondary mb-0">ドキュメンタリー映像「道を彩る人」</p>
                                     <br>
                                     <!-- Portfolio Modal - Image-->
                                     <div class="iframeWrapper mb-2">
