--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                 <br><hr><br>
                 <h5 class="text-black">受賞等</h5><br>
                 <ul class="publication-list">
-                    <li>日本学生支援機構（JASSO）特に優れた業績による返済全額免除</li>
+                    <li>特に優れた業績による返済免除（全額）</li>
+                    <p class="author-conf">日本学生支援機構（JASSO）</p>
                     <br>
                     <li>学生プレゼンテーション賞</li>
                     <p class="author-conf">DEIM2022（第14回データ工学と情報マネジメントに関するフォーラム）</p>
@@ -270,7 +271,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-2" src="assets/img/others/live.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">2019.10 - 2020.01</p>
+                                    <p class="mb-4">2018.07 - 2020.11</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
