--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <!-- Work Section Content-->
                 <ul class="work-list">
                     <li>2024.04 - 現在 :</li>
-                    <p>株式会社〇〇（データサイエンティスト）</a>
+                    <p>*****（データサイエンティスト）</p>
                     <br><br>
                     <li>2022.04 - 2024.03 :</li>
                     <p><a href="https://ernie.co.jp/" target="_blank">アーニーMLG株式会社</a>（学生エンジニア）</p>
