--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <br><hr><br>
                 <h5 class="text-black">受賞等</h5><br>
                 <ul class="publication-list">
-                    <li>特に優れた業績による返済免除（全額）</li>
+                    <li>特に優れた業績による返還免除（全額）</li>
                     <p class="author-conf">日本学生支援機構（JASSO）</p>
                     <br>
                     <li>学生プレゼンテーション賞</li>
