資格と職歴セクションを追加し、興味リストを更新

--- a/index.html
+++ b/index.html
@@ -82,9 +82,52 @@
                 <br>
                 <!-- Interet Section Content-->
                 <ul class="interest-list">
+                    <li>ローカルLLM
+
+                    </li>
                     <li>テキスト分類</li>
                     <li>ソーシャルネットワーク，ソーシャルメディア</li>
                     <li>パーソナライズ，推薦</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Qualifications Section-->
+        <section class="page-section bg-primary text-black mb-0" id="qualifications">
+            <div class="container">
+                <!-- Qualifications Section Heading-->
+                <h2 class="page-section-heading text-black">Qualifications</h2>
+                <br>
+                <!-- Qualifications Section Content-->
+                <ul class="qualification-list">
+                    <li>2025.07</li>
+                    <p>Microsoft Certified: Azure Administrator Associate (AZ-104)</p>
+                    <br>
+                    <li>2023.10</li>
+                    <p>Kaggle Competitions Expert</p>
+                    <br>
+                    <li>2021.07</li>
+                    <p>TOEIC 835 (LISTENING 420, READING 415)</p>
+                    <br>
+                    <li>2021.04</li>
+                    <p>JDLA Deep Learning for GENERAL (G検定)</p>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Work Section-->
+        <section class="page-section text-black mb-0" id="work">
+            <div class="container">
+                <!-- Work Section Heading-->
+                <h2 class="page-section-heading text-black">Work</h2>
+                <br>
+                <!-- Work Section Content-->
+                <ul class="work-list">
+                    <li>2024.04 - 現在 :</li>
+                    <p>*****（データサイエンティスト）</p>
+                    <br><br>
+                    <li>2022.04 - 2024.03 :</li>
+                    <p><a href="https://infinity.pkshatech.com/" target="_blank">株式会社PKSHA Infinity</a>（学生エンジニア）</p>
                 </ul>
             </div>
         </section>
@@ -167,51 +210,14 @@
             </div>
         </section>
 
-        <!-- Work Section-->
-        <section class="page-section bg-primary text-black mb-0" id="work">
-            <div class="container">
-                <!-- Work Section Heading-->
-                <h2 class="page-section-heading text-black">Work</h2>
-                <br>
-                <!-- Work Section Content-->
-                <ul class="work-list">
-                    <li>2024.04 - 現在 :</li>
-                    <p>*****（データサイエンティスト）</p>
-                    <br><br>
-                    <li>2022.04 - 2024.03 :</li>
-                    <p><a href="https://ernie.co.jp/" target="_blank">アーニーMLG株式会社</a>（学生エンジニア）</p>
-                </ul>
-            </div>
-        </section>
-
         <!-- Skills Section-->
-        <section class="page-section text-black mb-0" id="skills">
+        <section class="page-section bg-primary text-black mb-0" id="skills">
             <div class="container">
                 <!-- Skills Section Heading-->
                 <h2 class="page-section-heading text-black">Skills</h2>
                 <br>
                 <!-- Skills Section Content-->
                 <p>Python, PyTorch</p>
-            </div>
-        </section>
-
-        <!-- Qualifications Section-->
-        <section class="page-section bg-primary text-black mb-0" id="qualifications">
-            <div class="container">
-                <!-- Qualifications Section Heading-->
-                <h2 class="page-section-heading text-black">Qualifications</h2>
-                <br>
-                <!-- Qualifications Section Content-->
-                <ul class="qualification-list">
-                    <li>2023.10</li>
-                    <p>Kaggle Competitions Expert</p>
-                    <br>
-                    <li>2021.07</li>
-                    <p>TOEIC 835 (LISTENING 420, READING 415)</p>
-                    <br>
-                    <li>2021.04</li>
-                    <p>JDLA Deep Learning for GENERAL (G検定)</p>
-                </ul>
             </div>
         </section>
 
